Ristrutturazione workspace (snapshot/+release/), doppio Explorer, file-ops, immagini, ciclo di vita, assistente AI
Layout workspace: snapshot/ (area di lavoro) + release/ (versioni pubblicate)
+ repo git unico alla root (remote Gitea = mirror completo, sync senza reset).
Migrazione assistita per i workspace vecchi (tools/migrate-workspace.py).

Doppio Explorer: Snapshot con tutte le funzioni, Release in sola lettura
(documento → versione con stato → file, dipendenze congelate raggruppate;
visualizza/anteprima/stampa sempre dallo snapshot congelato).

File-ops snapshot: nuovo file/cartella con scaffold, rinomina con aggiornamento
automatico dei riferimenti (coppia html↔json atomica, boundary check
header/header-v2), delete BLOCCATO se il file è referenziato (409 con la lista
dei referenzianti), cartelle solo se vuote.

Immagini: viewer in tab (snapshot e release), upload nella cartella
selezionata con sovrascrittura su conferma.

Import DOCX: scaffold HTML completo, cartella di destinazione creata se
mancante, estrazione header/footer di Word (carte intestate, immagini
ancorate incluse).

Ciclo di vita: bozza → candidata (branch + PR Gitea) → approvata → rollback,
repo unico con staging separato snapshot/release; API pinnabile per versione.

Assistente AI BYOK/self-hosted (proposta modifiche con diff, applicazione
al buffer). Bundle CM6 ricostruito con supporto readOnly; fix anteprima
release (immagini data-URI).

Test: 69 unit/integration (5 nuove suites/casi) + 4 suite e2e
(22/21/22/20 check). Documentazione utente aggiornata (README).